
Added ASSERT_DEFAULT and TRACE_DEFAULT to change the defaults for
ASSERT_* and TRACE_*.  This lets you turn everything on with two
statements.

Set ASSERT_DEFAULT to true in t/*.t so that the tests are more
thorough.

Removed poing.perl, which has evolved into a separate program in its
own right.  It's now available from the author's page at
<http://www.newts.org/~troc/poe-grams.html>.


0.10 2000.03.23 (!!!)
---------------------

Added POE::Component to the MANIFEST.  Whoops!

Everything from 0.0901 through 0.0910 is included in this public
CPAN release.  People using 0.09 should read through to see
what has changed, paying extra attention to the bits marked
incompatible.


0.0910 2000.03.09 (!!!)
-----------------------

POE now keeps track of the file and line number where an event was
generated.  $session->option( default => 1 ) will report the line and
file, so you know where strange events came from.

(!!!) Add session ID to reference lookup from alias_resolve.
ID_id_to_session is depreciated.  The incompatibility here is that
session IDs take precedence over aliases, so sessions shouldn't be
aliased to numbers.

(!!!) Depreciated ID_session_to_id, since alias_resolve does the same
thing.  No warnings have been set yet, to give developers time to
react to the change.

Tweaked the Win32 support to eliminate some redefined sub warnings.


0.0909 2000.03.10
-----------------

Removing closures in 0.0907 re-broke code that expect $wheel->event()
to take immediate effect.  Changed the wheels to use references
instead of direct event names, so that anonymous coderefs could have
closures whose values can be changed from outside.


0.0908 2000.03.09
-----------------

Added logging to samples/poing.perl.  Now it records up and down times
to a tab-delimited file.

Added POE::Kernel::select_(pause|resume)_write, to pause and resume a
write select without bothering to maintain POE::Kernel's reference