@@ -57,3 +57,5 @@ samples/wheels.perl
 samples/wheels2.perl
 t/01_sessions.t
 t/02_alarms.t
+t/03_aliases.t
+t/04_selects.t
